@@ -1,16 +1,14 @@
 <%= simple_form_for [horse, booking] do |f| %>
   <p id="top-price">Prix par mois : <span id= "horse_price"><%=  @horse.monthly_price  %></span> €</p>
   <%= f.input :start_date, label: "Date de début", as: :date, start_year: Date.today.year,
-                                                   start_day: Date.today,
+                                                   start_day: Date.tomorrow,
                                                    end_year: Date.today.year + 5,
-                                                   order: [:day, :month, :year],
-                                                   as: :date, start_year: Date.today.year %>
+                                                   order: [:day, :month, :year] %>
 
 
   <%= f.input :end_date, label: "Date de fin", as: :date, start_year: Date.today.year,
                                                end_year: Date.today.year + 5,
-                                               order: [:day, :month, :year],
-                                               as: :date, start_year: Date.today.year %>
+                                               order: [:day, :month, :year]  %>
 
 
   <p><strong>Nombre de mois :</strong> <span id="days"></span></p>
