@@ -11,7 +11,9 @@
           <%= f.input :first_name, label: "Prénom" %>
           <%= f.input :last_name, label: "Nom" %>
           <%= f.input :sexe, collection: %w(Femme Homme) %>
-          <%= f.input :birth_date, label: "Date de naissance" %>
+          <%= f.input :birth_date, label: "Date de naissance", as: :date, start_year: Date.today.year - 100,
+                                                       end_year: Date.today.year,
+                                                       order: [:day, :month, :year] %>
           <%= f.input :level, label: "Galop", input_html: { min: '0', max: '9' } %>
           <%= f.input :email, required: true, autofocus: true %>
           <%= f.input :password, required: true, hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length), label: "Mot de passe" %>
@@ -29,5 +31,3 @@
     </div>
   </div>
 </div>
-
-
