@@ -14,4 +14,3 @@
     <% end %>
   </div>
 </div>
-
